# insights2

./: Cargo.toml  Makefile.toml  README.md
src/: data.rs  dist.rs  insights.rs  lib.rs  sample.rs  timeline.rs  util.rs
www/: index.html  index.js  styles.css
