[package]
name = "insights2"
version = "0.1.0"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition = "2018"

[lib]
crate-type=['cdylib']

[dependencies]
plotters = "0.2"
wasm-bindgen = "0.2.43"
linreg = "0.1.3"
web-sys = "0.3.22" # {version="0.3.22", features=["console"]}
itertools-num = "0.1.3"
rand = "0.7"
rand_distr = "0.2"
rand_xorshift = "0.2"
differential-evolution2 = {git = "https://github.com/Median-Group/differential-evolution2"}
lazy_static = "1.3.0"
wee_alloc = "0.4.4"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
